--- a/_posts/2017-09-12-love.markdown
+++ b/_posts/2017-09-12-love.markdown
@@ -9,10 +9,10 @@ date:   2017-09-12 10:30:12
 
 <blockquote class="blockquote-center">2017年9月9日，于北京</blockquote>
 
-<img src="http://ow2dmnlmn.bkt.clouddn.com/8.jpg" class="full-image" /> 
-<img src="http://ow2dmnlmn.bkt.clouddn.com/2.jpg" class="full-image" /> 
-<img src="http://ow2dmnlmn.bkt.clouddn.com/3.jpg" class="full-image" /> 
-<img src="http://ow2dmnlmn.bkt.clouddn.com/4.jpg" class="full-image" /> 
-<img src="http://ow2dmnlmn.bkt.clouddn.com/6.jpg" class="full-image" /> 
-<img src="http://ow2dmnlmn.bkt.clouddn.com/7.jpg" class="full-image" /> 
-<img src="http://ow2dmnlmn.bkt.clouddn.com/1.jpg" class="full-image" /> 
+<img src="http://ow2dmnlmn.bkt.clouddn.com/8.jpg"  /> 
+<img src="http://ow2dmnlmn.bkt.clouddn.com/2.jpg"  /> 
+<img src="http://ow2dmnlmn.bkt.clouddn.com/3.jpg"  /> 
+<img src="http://ow2dmnlmn.bkt.clouddn.com/4.jpg"  /> 
+<img src="http://ow2dmnlmn.bkt.clouddn.com/6.jpg"  /> 
+<img src="http://ow2dmnlmn.bkt.clouddn.com/7.jpg"  /> 
+<img src="http://ow2dmnlmn.bkt.clouddn.com/1.jpg"  /> 
