--- a/_posts/2017-09-12-love.markdown
+++ b/_posts/2017-09-12-love.markdown
@@ -9,4 +9,4 @@ date:   2017-09-12 10:30:12
 
 <blockquote class="blockquote-center">2017年9月9日，于北京</blockquote>
 
-<div align=center><img src="http://ow2dmnlmn.bkt.clouddn.com/8.jpg"/> </div>
+<img width="350" height="300" src="http://ow2dmnlmn.bkt.clouddn.com/8.jpg"/>
