--- a/_posts/2017-09-13-love.markdown
+++ b/_posts/2017-09-13-love.markdown
@@ -8,7 +8,7 @@ date:   2017-09-13 10:30:12
 ---
 
 <blockquote class="blockquote-center">2017年9月9日，于北京</blockquote>
-<div align=center><img width="300" height="300" src="http://ow2dmnlmn.bkt.clouddn.com/1.jpg"/></div>
-<img width="350" height="300" src="http://ow2dmnlmn.bkt.clouddn.com/1.jpg"/>
+
+<img width="350" height="300" src="http://ow2dmnlmn.bkt.clouddn.com/1.jpg" align=center/>
 <img width="350" height="300" src="http://ow2dmnlmn.bkt.clouddn.com/2.jpg"/>
 <img width="350" height="300" src="http://ow2dmnlmn.bkt.clouddn.com/3.jpg"/>
