--- a/_posts/2017-09-13-love.markdown
+++ b/_posts/2017-09-13-love.markdown
@@ -9,9 +9,6 @@ date:   2017-09-13 10:30:12
 
 <blockquote class="blockquote-center">2017年9月9日，于北京</blockquote>
 
-<img style="zoom:40%" src="http://ow2dmnlmn.bkt.clouddn.com/1.jpg"/>
-<img style="zoom:40%" src="http://ow2dmnlmn.bkt.clouddn.com/2.jpg"/>
-<img style="zoom:40%" src="http://ow2dmnlmn.bkt.clouddn.com/3.jpg"/>
-<img style="zoom:40%" src="http://ow2dmnlmn.bkt.clouddn.com/5.jpg"/>
-<img style="zoom:40%" src="http://ow2dmnlmn.bkt.clouddn.com/6.jpg"/>
-<img style="zoom:40%" src="http://ow2dmnlmn.bkt.clouddn.com/7.jpg"/>
+<img width="350" height="300" src="http://ow2dmnlmn.bkt.clouddn.com/1.jpg"/>
+<img width="350" height="300" src="http://ow2dmnlmn.bkt.clouddn.com/2.jpg"/>
+<img width="350" height="300" src="http://ow2dmnlmn.bkt.clouddn.com/3.jpg"/>
