--- a/_posts/2017-10-04-国庆上海行.markdown
+++ b/_posts/2017-10-04-国庆上海行.markdown
@@ -22,3 +22,40 @@ image: /assets/images/placeholders/101.jpg
 <figure>
   <img src="http://ow2dmnlmn.bkt.clouddn.com/shanghai106.jpg" alt="Placeholder"/>
 </figure>
+<figure>
+  <img src="http://ow2dmnlmn.bkt.clouddn.com/17sh1.jpg" alt="Placeholder"/>
+</figure>
+<figure>
+  <img src="http://ow2dmnlmn.bkt.clouddn.com/17sh2.jpg" alt="Placeholder"/>
+</figure>
+<figure>
+  <img src="http://ow2dmnlmn.bkt.clouddn.com/17sh3.jpg" alt="Placeholder"/>
+</figure>
+<figure>
+  <img src="http://ow2dmnlmn.bkt.clouddn.com/17sh4.jpg" alt="Placeholder"/>
+</figure>
+<figure>
+  <img src="http://ow2dmnlmn.bkt.clouddn.com/17sh5.jpg" alt="Placeholder"/>
+</figure>
+<figure>
+  <img src="http://ow2dmnlmn.bkt.clouddn.com/17sh6.jpg" alt="Placeholder"/>
+</figure>
+<figure>
+  <img src="http://ow2dmnlmn.bkt.clouddn.com/17sh7.jpg" alt="Placeholder"/>
+</figure>
+<figure>
+  <img src="http://ow2dmnlmn.bkt.clouddn.com/17sh8.jpg" alt="Placeholder"/>
+</figure>
+<figure>
+  <img src="http://ow2dmnlmn.bkt.clouddn.com/17sh9.jpg" alt="Placeholder"/>
+</figure>
+<figure>
+  <img src="http://ow2dmnlmn.bkt.clouddn.com/17sh10.jpg" alt="Placeholder"/>
+</figure>
+<figure>
+  <img src="http://ow2dmnlmn.bkt.clouddn.com/17sh11.jpg" alt="Placeholder"/>
+</figure>
+<figure>
+  <img src="http://ow2dmnlmn.bkt.clouddn.com/17sh12.jpg" alt="Placeholder"/>
+</figure>
+
